@@ -134,13 +134,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.10.1</version>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <argLine>@{argLine} -Dfile.encoding=UTF-8 --illegal-access=permit</argLine>
+          <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
           <runOrder>random</runOrder>
         </configuration>
       </plugin>
